--- a/cli_025_mean_sea_level_rise/contents/requirements.txt
+++ b/cli_025_mean_sea_level_rise/contents/requirements.txt
@@ -1,9 +1,9 @@
-requests
-#fiona
-#numpy
-#rasterio
-#pandas
-python-dateutil
-#gsutil
-#boto3
-pytz
+requests==2.18.4
+#fiona #1.7.11? unclear using pip freeze
+#numpy==1.13.3
+#rasterio==1.0a9
+#pandas==0.20.3
+python-dateutil==2.6.1
+#gsutil==4.28
+#boto3==1.4.4
+pytz==2017.3
