--- a/soc_016_conflict_protest_events/Dockerfile
+++ b/soc_016_conflict_protest_events/Dockerfile
@@ -20,7 +20,7 @@ COPY contents/ .
 VOLUME ./data
 
 RUN adduser -D $NAME
-RUN chown $NAME .
+RUN chown $NAME:$NAME .
 USER $NAME
 
 CMD ["python", "main.py"]
