--- a/cit_003_air_quality/Dockerfile
+++ b/cit_003_air_quality/Dockerfile
@@ -1,21 +1,26 @@
-FROM python:3.6
+FROM python:3.6-alpine
 MAINTAINER Francis Gassert <fgassert@wri.org>
+
+# install core libraries
+RUN apk update
+RUN apk add git
+
+# install application libraries
+RUN pip install requests
+RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 
 # set name
 ARG NAME=nrt-script
 ENV NAME ${NAME}
 
-# install core libraries
-RUN apt-get update
-
-# install application libraries
-RUN pip install requests
-
-# Copy the application folder inside the container
+# copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
-COPY time.cron .
 VOLUME ./data
+
+RUN adduser -D $NAME
+RUN chown $NAME:$NAME .
+USER $NAME
 
 CMD ["python", "main.py"]
