update to wat_040

--- a/wat_040_flood_events/Dockerfile
+++ b/wat_040_flood_events/Dockerfile
@@ -1,23 +1,28 @@
 FROM python:3.6
 MAINTAINER Francis Gassert <fgassert@wri.org>
 
-# set name
-ARG NAME=nrt-script
-ENV NAME ${NAME}
-
 # install core libraries
 RUN apt-get update
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install requests
+RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 RUN pip install fiona
 
-# Copy the application folder inside the container
+# set name
+ARG NAME=nrt-script
+ENV NAME ${NAME}
+
+# copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
-COPY time.cron .
 VOLUME ./data
+
+# add user
+RUN useradd $NAME
+RUN chown -R $NAME:$NAME .
+USER $NAME
 
 CMD ["python", "main.py"]
