--- a/cli_005_polar_sea_ice_extents/contents/requirements.txt
+++ b/cli_005_polar_sea_ice_extents/contents/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.18.4
-#fiona #1.7.11? unclear using pip freeze
+fiona #1.7.11? unclear using pip freeze
 numpy==1.13.3
 rasterio==1.0a9
 #pandas==0.20.3
