test foo_003 --- occasionally when running script from scratch, got error 'Key (_uid)=(201407_WA_CS_0) already exists.'. I just ran the entire script from scratch again and did not get the error.

--- a/foo_003_fews_new_food_insecurity/Dockerfile
+++ b/foo_003_fews_new_food_insecurity/Dockerfile
@@ -1,13 +1,15 @@
 FROM python:3.6
 MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
-ARG NAME=python-script
+ARG NAME=foo_003
 ENV NAME ${NAME}
 
 # install core libraries
 RUN apt-get update
 RUN apt-get install -y cron
-# install application libraries, comment out for vector only connectors
-RUN apt-get install -y gdal-bin libgdal-dev
+
+# install application libraries
+RUN pip install --upgrade pip && pip install fiona shapely python-dateutil
+RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
@@ -15,9 +17,6 @@ WORKDIR /opt/$NAME/
 COPY contents/ .
 COPY time.cron .
 VOLUME ./data
-
-# install application libraries
-RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # Launch script
 CMD ["python", "main.py"]
