--- a/prep_0047_drought_monitor/Dockerfile
+++ b/prep_0047_drought_monitor/Dockerfile
@@ -20,9 +20,8 @@ WORKDIR /opt/$NAME/
 COPY contents/ .
 VOLUME ./data
 
-# add user
-RUN useradd $NAME
-RUN chown -R $NAME:$NAME .
+RUN groupadd -r $NAME && useradd -r -g $NAME $NAME
+RUN chown -R $NAME:$NAME /opt/$NAME/
 USER $NAME
 
 CMD ["python", "main.py"]
