updates to cli_035 --- still needs testing!

--- a/cli_035_surface_temp_analysis/Dockerfile
+++ b/cli_035_surface_temp_analysis/Dockerfile
@@ -16,23 +16,23 @@ RUN apt-get install -y \
   cron \
   && apt-get clean
 
-# Move and copy over requirements here to speed up dev - don't need to reinstall
-# Python packages when only change is to application code
-COPY contents/requirements.txt .
-# install application libraries
 RUN pip install numpy #Install this ahead of rasterio for appropriate applications
-RUN pip install --upgrade pip && pip install -r requirements.txt
-RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
+RUN pip install --upgrade pip && pip install \
+    requests \
+    rasterio \
+    netCDF4 \
+    python-dateutil \
+    earthengine-api \
+    google-cloud-storage
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
 COPY time.cron .
-COPY credentials.json .
 VOLUME /opt/$NAME/data
 
-RUN useradd $NAME
+RUN groupadd -r $NAME && useradd -r -g $NAME $NAME
 RUN chown -R $NAME:$NAME .
 USER $NAME
 
