wip got connection to go through

--- a/com_009_material_flow_databases/contents/odbcinst.ini
+++ b/com_009_material_flow_databases/contents/odbcinst.ini
@@ -1,6 +1,6 @@
 [PostgreSQL Unicode]
 Description     = PostgreSQL ODBC driver (Unicode version)
-Driver      = psqlodbcw.so
+Driver      = /usr/local/lib/psqlodbcw.so
 Setup       = libodbcpsqlS.so
 Debug       = 0
 CommLog     = 1
