--- a/com_009_material_flow_databases/Dockerfile_without_conda
+++ b/com_009_material_flow_databases/Dockerfile_without_conda
@@ -4,7 +4,7 @@ MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
 RUN apt-get update -y
 
 # Install core libraries for ODBC connection
-RUN apt-get install -y unixodbc-dev unixodbc-bin unixodbc
+RUN apt-get install -y build-essential unixodbc-dev unixodbc-bin unixodbc
 
 # https://github.com/mkleehammer/pyodbc
 RUN pip install --upgrade pip && pip install pyodbc
@@ -14,11 +14,10 @@ RUN pip install --upgrade pip && pip install pyodbc
 ## https://www.cnblogs.com/he11o-liu/p/7503232.html
 ## https://odbc.postgresql.org/docs/unix-compilation.html
 
-RUN apt-get install -y build-essential
 RUN wget https://ftp.postgresql.org/pub/odbc/versions/src/psqlodbc-09.02.0100.tar.gz
 RUN gunzip psqlodbc-09.02.0100.tar.gz
 RUN tar xvf psqlodbc-09.02.0100.tar
-## RUN cd psqlodbc-09.02.0100 && sh ./configure --with-unixodbc && make && make install
+RUN cd psqlodbc-09.02.0100 && sh ./configure --with-unixodbc && make && make install
 
 # set name
 ARG NAME=nrt-script
