--- a/dis_001_significant_earthquakes/Dockerfile
+++ b/dis_001_significant_earthquakes/Dockerfile
@@ -1,15 +1,17 @@
-FROM python:3.6
+FROM python:3.6-alpine
 MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
-ARG NAME=dis_001
-ENV NAME ${NAME}
 
 # install core libraries
-RUN apt-get update
-RUN apt-get install -y cron
+RUN apk update
+RUN apk add git
 
 # install application libraries
 RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 RUN pip install --upgrade pip && pip install requests
+
+# Env
+ARG NAME=nrt-script
+ENV NAME ${NAME}
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
