--- a/ene_008_oil_chemical_spill_incidents/Dockerfile
+++ b/ene_008_oil_chemical_spill_incidents/Dockerfile
@@ -1,25 +1,30 @@
-FROM python:3.6
+FROM python:3.6-alpine
 MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
-ARG NAME=ene_008
-ENV NAME ${NAME}
 
 # install core libraries
-RUN apt-get update
-RUN apt-get install -y cron
+RUN apk update
+RUN apk add git
+RUN pip install --upgrade pip
 
+# install application libraries
+RUN pip install requests
 RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
+
+# env
+ARG NAME=ene_008
+ENV NAME ${NAME}
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
 COPY time.cron .
-VOLUME ./data
 
 # Set user for container security
-RUN groupadd -r $NAME && useradd -r -g $NAME $NAME
-RUN chown -R $NAME:$NAME /opt/$NAME/
+RUN adduser -D $NAME
+RUN chown -R $NAME /opt/$NAME/
 USER $NAME
+VOLUME ./data
 
 # Launch script
 CMD ["python", "main.py"]
