fix eeUtil dependency

--- a/cli_005_polar_sea_ice_extents/Dockerfile
+++ b/cli_005_polar_sea_ice_extents/Dockerfile
@@ -17,6 +17,8 @@ RUN apt-get install -y \
   && apt-get clean
 
 RUN pip install oauth2client
+RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
+
 RUN pip install --upgrade pip && pip install \
     earthengine-api \
     google-cloud-storage
