solving issues with docker

--- a/soc_038_monthly_asylum_requests/Dockerfile
+++ b/soc_038_monthly_asylum_requests/Dockerfile
@@ -8,7 +8,7 @@ RUN apk add git
 # install application libraries
 RUN pip install requests
 RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
-
+run pip install json
 # set name
 ARG NAME=soc_038
 ENV NAME ${NAME}
