--- a/wat_040_flood_events/Dockerfile
+++ b/wat_040_flood_events/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install requests
 RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 RUN pip install fiona
+RUN pip install json
 
 # set name
 ARG NAME=nrt-script
