cli_005 remove volume from Dockerfile and update eeUtil package

--- a/cli_005_polar_sea_ice_extents/Dockerfile
+++ b/cli_005_polar_sea_ice_extents/Dockerfile
@@ -20,13 +20,13 @@ RUN pip install oauth2client
 RUN pip install --upgrade pip && pip install \
     earthengine-api \
     google-cloud-storage
+RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
 COPY time.cron .
-VOLUME /opt/$NAME/data
 
 RUN groupadd -r $NAME && useradd -r -g $NAME $NAME
 RUN chown -R $NAME:$NAME .
