update_nrt_timestamps_add_ee

--- a/update_nrt_timestamps/Dockerfile
+++ b/update_nrt_timestamps/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
-#RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
+RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
 RUN pip install oauth2client
 # set name
 ARG NAME=nrt-script
