soc_062_add_last_update_date

--- a/soc_062_internal_displacement/Dockerfile
+++ b/soc_062_internal_displacement/Dockerfile
@@ -16,7 +16,7 @@ ENV NAME ${NAME}
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
-COPY contents/ .
+COPY contents .
 VOLUME ./data
 
 RUN adduser -D $NAME
