--- a/cit_038_waccm_atmospheric_chemistry_model/Dockerfile
+++ b/cit_038_waccm_atmospheric_chemistry_model/Dockerfile
@@ -7,6 +7,8 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
+RUN apt-cache show gdal-bin
+RUN apt-cach show libgdal-dev
 RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
 RUN pip install oauth2client
 RUN pip install bs4
