change gdal version

--- a/cit_002_gmao_air_quality/Dockerfile
+++ b/cit_002_gmao_air_quality/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update
 RUN pip install -U pip
 
 # install application libraries
-RUN apt-get install -y gdal-bin libgdal-dev
+RUN apt-get install -y gdal-bin=2.1.2+dfsg-5 libgdal-dev=2.1.2+dfsg-5
 RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
 RUN pip install oauth2client
 RUN pip install bs4
