--- a/cit_002_gmao_air_quality/Dockerfile
+++ b/cit_002_gmao_air_quality/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install -U pip
 RUN pip install numpy==1.14.3
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
-RUN pip install oauth2client=3.0.0
+RUN pip install oauth2client==3.0.0
 RUN pip install bs4
 
 
