--- a/cit_002_gmao_air_quality/Dockerfile
+++ b/cit_002_gmao_air_quality/Dockerfile
@@ -6,14 +6,14 @@ RUN apt-get update
 RUN pip install -U pip
 
 # install application libraries
-RUN apt-cache show gdal-bin
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
 RUN pip install oauth2client
 RUN pip install netCDF4
 RUN pip install bs4
 RUN pip install numpy==1.14.3
-
+RUN apt-get upgrade gdal-bin
+RUN apt-get upgrade libgdal-dev
 RUN apt-get -y install python-gdal
 
 # set name
