add pip install ee api

--- a/update_nrt_timestamps/Dockerfile
+++ b/update_nrt_timestamps/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && pip install -U pip
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
 RUN pip install oauth2client
-RUN pip install earthengine-api
+RUN pip install google.appengine.api
 
 # set name
 ARG NAME=nrt-script
