add pip install ee api

--- a/update_nrt_timestamps/Dockerfile
+++ b/update_nrt_timestamps/Dockerfile
@@ -7,8 +7,8 @@ RUN apt-get update && pip install -U pip
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
-RUN pip install oauth2client
-RUN pip install google.appengine.api
+RUN pip install oauth2client==3.0.0
+
 
 # set name
 ARG NAME=nrt-script
