--- a/cli_021_snow_cover/Dockerfile
+++ b/cli_021_snow_cover/Dockerfile
@@ -7,7 +7,7 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
-RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
+RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install oauth2client
 RUN pip install bs4
 
