--- a/com_031_viirs_boats/Dockerfile
+++ b/com_031_viirs_boats/Dockerfile
@@ -8,7 +8,7 @@ RUN pip install -U pip
 # install application libraries
 RUN pip install --upgrade pip
 RUN pip install requests
-RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
+RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 RUN pip install pandas
 RUN pip install boto3
