--- a/foo_024_051_054_vegetation_health_products/Dockerfile
+++ b/foo_024_051_054_vegetation_health_products/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get install -y \
     gdal-bin \
     libgdal-dev
 
-RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
+RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install oauth2client
 RUN pip install numpy
 RUN pip install \
