--- a/cit_002_gmao_air_quality/Dockerfile
+++ b/cit_002_gmao_air_quality/Dockerfile
@@ -7,8 +7,8 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
+RUN pip install oauth2client
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
-RUN pip install oauth2client==4.0.0
 RUN pip install netCDF4==1.5.3
 RUN pip install bs4==0.0.1
 RUN pip install numpy==1.14.3
