--- a/foo_024_051_054_vegetation_health_products/Dockerfile
+++ b/foo_024_051_054_vegetation_health_products/Dockerfile
@@ -6,10 +6,7 @@ RUN apt-get update
 RUN pip install -U pip
 
 # install application libraries
-RUN apt-get install -y \
-    gdal-bin \
-    libgdal-dev
-
+RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install oauth2client
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install numpy
