--- a/cli_021_snow_cover/Dockerfile
+++ b/cli_021_snow_cover/Dockerfile
@@ -7,12 +7,11 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
+RUN apt-get -y install python-gdal
 RUN pip install oauth2client
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install bs4
-
-#install
-RUN apt-get -y install python-gdal
+RUN pip install python-dateutil==2.8.1
 
 # set name
 ARG NAME=nrt-script
