--- a/cli_037_smoke_plumes_US/Dockerfile
+++ b/cli_037_smoke_plumes_US/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
-MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
+MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 
 # install application libraries
 RUN pip install --upgrade pip && \
