--- a/ene_008_oil_chemical_spill_incidents/Dockerfile
+++ b/ene_008_oil_chemical_spill_incidents/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6-alpine
-MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
+MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
 RUN apk update
