--- a/foo_053_alerts_price_spikes/Dockerfile
+++ b/foo_053_alerts_price_spikes/Dockerfile
@@ -10,7 +10,7 @@ RUN apk update && apk upgrade && \
 # install application libraries
 RUN pip install --upgrade pip
 RUN pip install requests
-RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
+RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install shapely
 RUN pip install numpy
 
