--- a/cli_047_ndc_ratification/Dockerfile
+++ b/cli_047_ndc_ratification/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update
 RUN pip install -U pip
 
 # install application libraries
-RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
+RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install pandas
 
 # set name
