--- a/dis_009_tsunamis/Dockerfile
+++ b/dis_009_tsunamis/Dockerfile
@@ -9,9 +9,10 @@ RUN apt-get install -y cron
 
 # install application libraries
 RUN pip install --upgrade pip && pip install \
-    requests \
-    cartoframes
-RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
+    requests==2.22.0
+RUN pip install cartoframes==0.9.2
+RUN pip install docopt==0.6.2
+RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
