--- a/ene_008_oil_chemical_spill_incidents/Dockerfile
+++ b/ene_008_oil_chemical_spill_incidents/Dockerfile
@@ -8,7 +8,7 @@ RUN pip install --upgrade pip
 
 # install application libraries
 RUN pip install requests
-RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
+RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # env
 ARG NAME=ene_008
