--- a/foo_024_051_054_vegetation_health_products/Dockerfile
+++ b/foo_024_051_054_vegetation_health_products/Dockerfile
@@ -7,12 +7,12 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
-RUN pip install oauth2client
+RUN pip install oauth2client==4.1.3
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
-RUN pip install numpy
+RUN pip install numpy==1.18.1
 RUN pip install \
-    netCDF4 \
-    rasterio
+    netCDF4==1.5.3 \
+    rasterio==1.1.2
 
 # set name
 ARG NAME=nrt-script
