--- a/foo_053_alerts_price_spikes/Dockerfile
+++ b/foo_053_alerts_price_spikes/Dockerfile
@@ -10,6 +10,7 @@ RUN apk update && apk upgrade && \
 # install application libraries
 RUN pip install --upgrade pip
 RUN pip install requests==2.22.0
+RUN pip install pandas==0.25.3
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install shapely==1.7.0
 RUN pip install numpy==1.18.1
