--- a/wat_040_flood_events/Dockerfile
+++ b/wat_040_flood_events/Dockerfile
@@ -1,29 +1,28 @@
 FROM python:3.6
 MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
 
+# set name
+ARG NAME=nrt-script
+ENV NAME ${NAME}
+
 # install core libraries
 RUN apt-get update
 
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
-RUN pip install requests
+RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
-RUN pip install fiona
-
-# set name
-ARG NAME=nrt-script
-ENV NAME ${NAME}
+RUN pip install fiona==1.8.13
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
-VOLUME ./data
 
 # add user
 RUN groupadd -r $NAME && useradd -r -g $NAME $NAME
-RUN chown -R $NAME:$NAME /opt/$NAME/
+RUN chown -R $NAME:$NAME .
 USER $NAME
 
 CMD ["python", "main.py"]
