--- a/cli_005_polar_sea_ice_extents/Dockerfile
+++ b/cli_005_polar_sea_ice_extents/Dockerfile
@@ -16,11 +16,8 @@ RUN apt-get install -y \
   cron \
   && apt-get clean
 
-RUN pip install python-dateutil
-RUN pip install --upgrade pip && pip install \
-    earthengine-api \
-    google-cloud-storage
-RUN pip install oauth2client
+RUN pip install python-dateutil==2.8.0
+RUN pip install oauth2client==4.1.3
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install python-dateutil==2.8.1
 
