--- a/foo_053_alerts_price_spikes/Dockerfile
+++ b/foo_053_alerts_price_spikes/Dockerfile
@@ -9,10 +9,10 @@ RUN apk update && apk upgrade && \
    libffi-dev gcc python3-dev musl-dev
 # install application libraries
 RUN pip install --upgrade pip
-RUN pip install requests
+RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
-RUN pip install shapely
-RUN pip install numpy
+RUN pip install shapely==1.6.4
+RUN pip install numpy==1.18.1
 
 # set name
 ARG NAME=nrt-script
