--- a/dis_001_significant_earthquakes/Dockerfile
+++ b/dis_001_significant_earthquakes/Dockerfile
@@ -6,7 +6,7 @@ RUN apk update
 RUN apk add git
 
 # install application libraries
-RUN pip install --upgrade pip && pip install requests
+RUN pip install --upgrade pip && pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # Env
