--- a/dis_003_volcano_reports/Dockerfile
+++ b/dis_003_volcano_reports/Dockerfile
@@ -10,10 +10,10 @@ RUN apt-get install -y cron
 # install application libraries
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install --upgrade pip && pip install \
-    requests \
-    xmljson \
-    lxml \
-    python-dateutil
+    requests==2.22.0 \
+    xmljson==0.2.0 \
+    lxml==4.5.0 \
+    python-dateutil==2.8.0
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
