set versions for dis.006 and dis.012

--- a/dis_006_reliefweb_disasters/Dockerfile
+++ b/dis_006_reliefweb_disasters/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install -y cron
 # install application libraries
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install -U pip \
-    requests
+    requests==2.22.0
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
