--- a/dis_013_volcano_eruptions/Dockerfile
+++ b/dis_013_volcano_eruptions/Dockerfile
@@ -11,9 +11,9 @@ RUN apt-get install -y cron
 # install application libraries
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install -U pip \
-    requests \
-    xmljson \
-    lxml
+    requests==2.22.0 \
+    xmljson==0.2.0 \
+    lxml==4.5.0
 
 # Copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
