--- a/soc_018_migrant_deaths/Dockerfile
+++ b/soc_018_migrant_deaths/Dockerfile
@@ -8,7 +8,7 @@ RUN apk update
 RUN apk add git
 
 # install application libraries
-RUN pip install --upgrade pip && pip install requests
+RUN pip install --upgrade pip && pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 
 # Copy the application folder inside the container
