--- a/foo_053_alerts_price_spikes/Dockerfile
+++ b/foo_053_alerts_price_spikes/Dockerfile
@@ -13,6 +13,7 @@ RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install shapely==1.6.4
 RUN pip install numpy==1.18.1
+RUN pip install pandas==0.25.3
 
 # set name
 ARG NAME=nrt-script
