remove gitignore, dockerignore, and .env.sample from scripts to host at root leveel

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+*#
+
 # Mac organization details
 *.DS_Store*
 
 # Data files
+*data/*
 *dst/*
 *.nc
 *.tif
@@ -13,6 +16,7 @@
 *.ipynb
 *__pychache__*
 *.pyc
+*.py[c|o]
 
 # Environmental variables
 *.env*
