add original author to scripts

--- a/archived/soc_038_monthly_asylum_requests/Dockerfile
+++ b/archived/soc_038_monthly_asylum_requests/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.6-alpine
 MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
+#Note this script was originally developed by Nathan Suberi <nathan.suberi@wri.org>
 
 # install core libraries
 RUN apk update
