--- a/archived/com_031_viirs_boats/Dockerfile
+++ b/archived/com_031_viirs_boats/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.6
 MAINTAINER Kristine Lister <kristine.lister@wri.org>
+#Note this script was originally developed by Kristine Lister <kristine.lister@wri.org>
 
 # install core libraries
 RUN apt-get update
