--- a/foo_003_fews_new_food_insecurity/Dockerfile
+++ b/foo_003_fews_new_food_insecurity/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.6
 MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
+#Note this script was originally developed by Nathan Suberi <nathan.suberi@wri.org>
+
 ARG NAME=foo_003
 ENV NAME ${NAME}
 
