add carto module to dockerfile

--- a/upload_worldbank_data/Dockerfile
+++ b/upload_worldbank_data/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install pandas==0.24.2
 RUN pip install boto3==1.10.45
 RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
-RUN pip install carto=1.11.1
+RUN pip install carto==1.11.1
 
 # set name
 ARG NAME=upload-world-bank
